objects/amc__Risk__c.object
<CustomObject>
    <description>This object is used to record any risks associated to a particular project</description>
    <fields>
        <fullName>amc__Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Action record</inlineHelpText>
        <label>Action</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>amc__Action__c.amc__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.amc__Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>amc__Action__c</referenceTo>
        <relationshipLabel>Risks</relationshipLabel>
        <relationshipName>Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Area_of_Impact__c</fullName>
        <inlineHelpText>Identifies the areas of the project the risk may impact</inlineHelpText>
        <label>Area of Impact</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Time</fullName>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Scope</fullName>
                </value>
                <value>
                    <fullName>Benefit</fullName>
                </value>
                <value>
                    <fullName>Resource</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Category__c</fullName>
        <inlineHelpText>Identifies the category of the risk</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strategic / Commercial</fullName>
                </value>
                <value>
                    <fullName>Economic / Financial</fullName>
                </value>
                <value>
                    <fullName>Legal / Regulatory</fullName>
                </value>
                <value>
                    <fullName>Organisation / Human Factors</fullName>
                </value>
                <value>
                    <fullName>Political</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Technical / Operational</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Counter_Measure_Description__c</fullName>
        <inlineHelpText>Identifies the details of the counter measure</inlineHelpText>
        <label>Counter Measure Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amc__Counter_Measure__c</fullName>
        <inlineHelpText>Identifies the strategy selected to counter the risk</inlineHelpText>
        <label>Counter Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prevention</fullName>
                </value>
                <value>
                    <fullName>Reduction</fullName>
                </value>
                <value>
                    <fullName>Transference</fullName>
                </value>
                <value>
                    <fullName>Acceptance</fullName>
                </value>
                <value>
                    <fullName>Contingency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Current_Status__c</fullName>
        <inlineHelpText>Identifies the current status of the risk</inlineHelpText>
        <label>Current Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Reducing</fullName>
                </value>
                <value>
                    <fullName>Increasing</fullName>
                </value>
                <value>
                    <fullName>No Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Date_Identified__c</fullName>
        <inlineHelpText>The date the risk was identified</inlineHelpText>
        <label>Date Identified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Client_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Risk should be excluded from the Client Overview Page</inlineHelpText>
        <label>Exclude from Client Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Impact_Rating__c</fullName>
        <inlineHelpText>Identifies the level of impact this risk could have on the project</inlineHelpText>
        <label>Impact Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Impact_Score__c</fullName>
        <formula>Case(amc__Impact_Rating__c, &quot;High&quot;, 3, &quot;Medium&quot;, 2, &quot;Low&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the score associated with the Impact Rating</inlineHelpText>
        <label>Impact Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Include_in_Weekly_Status_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>can this be included in the weekly status report pdf?</description>
        <label>Include in Weekly Status Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Milestone record</inlineHelpText>
        <label>Milestone</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.amc__Project__c</field>
                <operation>equals</operation>
                <valueField>amc__Milestone__c.amc__Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>amc__Milestone__c</referenceTo>
        <relationshipLabel>Risks</relationshipLabel>
        <relationshipName>Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Notes__c</fullName>
        <inlineHelpText>Identifies the details of the risk</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amc__Probability_Rating__c</fullName>
        <inlineHelpText>Identifies the probability of the risk occurring</inlineHelpText>
        <label>Probability Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Probability_Score__c</fullName>
        <formula>Case(amc__Probability_Rating__c, &quot;High&quot;, 3, &quot;Medium&quot;, 2, &quot;Low&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the score associated with the Probability Rating</inlineHelpText>
        <label>Probability Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Project__c</fullName>
        <inlineHelpText>Lookup to the Project record</inlineHelpText>
        <label>Project</label>
        <referenceTo>amc__Project__c</referenceTo>
        <relationshipLabel>Risks</relationshipLabel>
        <relationshipName>Risks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>amc__Proximity__c</fullName>
        <inlineHelpText>Identifies when this risk is likely to occur</inlineHelpText>
        <label>Proximity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Short</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Long</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Risk_Notes_RT__c</fullName>
        <inlineHelpText>Detailed Notes about the Risk</inlineHelpText>
        <label>Risk Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>amc__Risk_Owner_Current_User__c</fullName>
        <formula>IF(amc__Risk_Owner__r.amc__User__r.Id  = $User.Id, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies if the User viewing the record is the User linked to the Role that is the Risk Owner. If true, 1 is displayed, if false, 0 is displayed. This field can be used to create Dynamic List View / Report Filters</inlineHelpText>
        <label>Risk Owner Current User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Risk_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Role that is responsible for this Risk</inlineHelpText>
        <label>Risk Owner</label>
        <referenceTo>amc__Role__c</referenceTo>
        <relationshipLabel>Risks</relationshipLabel>
        <relationshipName>Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Risk_Score__c</fullName>
        <formula>amc__Impact_Score__c * amc__Probability_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the overall risk score based on the Impact Rating * Probability Rating</inlineHelpText>
        <label>Risk Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Risk</label>
    <listViews>
        <fullName>amc__All</fullName>
        <columns>NAME</columns>
        <columns>amc__Category__c</columns>
        <columns>amc__Current_Status__c</columns>
        <columns>amc__Date_Identified__c</columns>
        <columns>amc__Action__c</columns>
        <columns>amc__Milestone__c</columns>
        <columns>amc__Project__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Risk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>